[package]
name = "lambdupdate"
authors = ["Jacob Luszcz"]
default-run = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-lambda = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws_lambda_events = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
jluszcz_rust_utils = { git = "https://github.com/jluszcz/rust-utils" }
lambda_runtime = "1"
log = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "lambda"
path = "src/lambda.rs"
